# gabriel

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  default.css  gabriel.spec  howto.html  index.html
client/: Makefile.am  gabriel-client.c  gabriel-main.c  gabriel-session.c  gabriel-session.h  gabriel.c
server/: Makefile.am  gabriel-dbus.conf  gabriel-server-start.in  gabriel-server-stop
src/: Makefile.am  gabriel-client.c  gabriel-client.h  gabriel-main.c  gabriel-session.c  gabriel-session.h  gabriel.c  gabriel.h
